@@ -1,5 +1,17 @@
 Changes with Apache 1.3.13
 
+  *) Initial support added for mod_proxy under MPE/iX.
+     [Mark Bixby <mark_bixby@hp.com>]
+
+  *) Refined UID/GID management and permissions on MPE/iX to deal 
+     with some limitations. [Mark Bixby <mark_bixby@hp.com>]
+
+  *) Updated the MPE DSO code to be compatible with an OS patch that
+     fixed an earlier DSO problem,  #include tweakage required for 
+     using apxs to build modules without access to the full source 
+     tree, and other minor MPE tweaks.  
+     [Mark Bixby <mark_bixby@hp.com>]
+
   *) Tighten up the syntax checking of Host: headers to fix a
      security bug in some mass virtual hosting configurations
      that can allow a remote attacker to retrieve some files
